--- a/police.html
+++ b/police.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Политика конфиденциальности</font></font></strong> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-    [Название разработчика/компании] создал приложение EclipseTestApp как приложение [с открытым исходным кодом/бесплатное/Freemium/с поддержкой рекламы/коммерческое]. </font><font style="vertical-align: inherit;">Эта УСЛУГА предоставляется [название разработчика/компании] [бесплатно] и предназначена для использования как есть.
+    [Название разработчика/компании] создал приложение OceanStartTestApp как приложение [с открытым исходным кодом/бесплатное/Freemium/с поддержкой рекламы/коммерческое]. </font><font style="vertical-align: inherit;">Эта УСЛУГА предоставляется [название разработчика/компании] [бесплатно] и предназначена для использования как есть.
 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
     Эта страница используется для информирования посетителей о [моей/нашей] политике в отношении сбора, использования и раскрытия Личной информации, если кто-либо решил использовать [мою/нашу] Службу.
 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
     Если вы решите использовать [мой/наш] Сервис, вы соглашаетесь на сбор и использование информации в связи с этой политикой. </font><font style="vertical-align: inherit;">Личная информация, которую [Я/Мы] собираем, используется для предоставления и улучшения Сервиса. </font><font style="vertical-align: inherit;">[Я/мы] не будем использовать или передавать вашу информацию кому-либо, кроме случаев, описанных в настоящей Политике конфиденциальности.
 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-    Термины, используемые в настоящей Политике конфиденциальности, имеют те же значения, что и в наших Условиях и положениях, которые доступны в EclipseTestApp, если иное не определено в настоящей Политике конфиденциальности.
+    Термины, используемые в настоящей Политике конфиденциальности, имеют те же значения, что и в наших Условиях и положениях, которые доступны в OceanStartTestApp, если иное не определено в настоящей Политике конфиденциальности.
 </font></font></p> <p><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Сбор и использование информации</font></font></strong></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
     Для лучшего опыта при использовании нашего Сервиса [Я/мы] можем потребовать от вас предоставить нам определенную личную информацию[добавьте все, что вы собираете здесь, например, имя пользователя, адрес, местонахождение, изображения] Информация, которую [Я/ Мы] запрос будет [сохраняться на вашем устройстве и не будет собираться [мной/нами] каким-либо образом]/[сохраняться нами и использоваться, как описано в настоящей политике конфиденциальности].
 </font></font></p> <div><p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
